5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4342/executions/1807_2573.log
== TEST (2019-06-13 14:47:10) 
-- CODE:
from numpy import *

peso= array(eval(input('peso:')))
altura= array(eval(input('altura:')))
vet= zeros(3, dtype=float)
imc= peso[i]/(altura[i]**2)
i=0
for i in range(size(peso))
	vet[0]= peso[0]/(altura[0]**2)
print(vet)
		
		
-- ERROR:
File "XXXX", line 8
    for i in range(size(peso))
                             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 14:47:14) 
-- CODE:
from numpy import *

peso= array(eval(input('peso:')))
altura= array(eval(input('altura:')))
vet= zeros(3, dtype=float)
imc= peso[i]/(altura[i]**2)
i=0
for i in range(size(peso)):
	vet[0]= peso[0]/(altura[0]**2)
print(vet)
		
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 14:49:07) 
-- CODE:
from numpy import *

peso= array(eval(input('peso:')))
altura= array(eval(input('altura:')))
vet= zeros(3, dtype=float)
imc= peso[i]/(altura[i]**2)
i=0
for i in range(size(peso)):
	vet[i]= peso[i]/(altura[i]**2)
print(vet)
		
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 14:49:48) 
-- CODE:
from numpy import *

peso= array(eval(input('peso:')))
altura= array(eval(input('altura:')))
vet= zeros(3, dtype=float)
imc= peso[i]/(altura[i]**2)
i=0
for i in range(size(peso[i])):
	vet[i]= peso[i]/(altura[i]**2)
print(vet)
		
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 14:51:35) 
-- CODE:
from numpy import *

peso= array(eval(input('peso:')))
altura= array(eval(input('altura:')))
vet= zeros(3, dtype=float)
imc= peso[i]/(altura[i]**2)
i=0
for i in range(size(peso)):
	if(peso[i]>=0 and altura[i]>=0)	
		vet[i]= peso[i]/(altura[i]**2)
print(vet)
		
		
-- ERROR:
File "XXXX", line 9
    if(peso[i]>=0 and altura[i]>=0)	
                                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 14:51:40) 
-- CODE:
from numpy import *

peso= array(eval(input('peso:')))
altura= array(eval(input('altura:')))
vet= zeros(3, dtype=float)
imc= peso[i]/(altura[i]**2)
i=0
for i in range(size(peso)):
	if(peso[i]>=0 and altura[i]>=0)	:
		vet[i]= peso[i]/(altura[i]**2)
print(vet)
		
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 14:52:45) 
-- CODE:
from numpy import *

peso= array(eval(input('peso:')))
altura= array(eval(input('altura:')))
vet= zeros(3, dtype=float)
imc= peso[i]/(altura[i]**2)
i=0
for i in range(size(peso)):
	if(peso[i]>=0 and altura[i]>=0)	:
		vet[0]= peso[0]/(altura[0]**2)
print(vet)
		
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 14:53:06) 
-- CODE:
from numpy import *

peso= array(eval(input('peso:')))
altura= array(eval(input('altura:')))
vet= zeros(3, dtype=float)
imc= peso[i]/(altura[i]**2)

for i in range(size(peso)):
	if(peso[i]>=0 and altura[i]>=0)	:
		vet[0]= peso[0]/(altura[0]**2)
print(vet)
		
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 14:54:44) 
-- CODE:
from numpy import *

peso= array(eval(input('peso:')))
altura= array(eval(input('altura:')))
vet= zeros(3, dtype=float)
imc= peso[i]/(altura[i]**2)

for i in peso:
	if(peso[i]>=0 and altura[i]>=0)	:
		vet[0]= peso[0]/(altura[0]**2)
print(vet)
		
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 15:37:14) 
-- CODE:
from numpy import *

peso= array(eval(input('peso:')))
altura= array(eval(input('altura:')))
vet= zeros(3, dtype=float)
imc= peso[i]/(altura[i]**2)

for i in range(size(peso):
	if(peso[i]>=0 and altura[i]>=0)	:
		vet[i]= peso[i]/(altura[i]**2)
print(vet)
		
		
-- ERROR:
File "XXXX", line 8
    for i in range(size(peso):
                             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 15:37:52) 
-- CODE:
from numpy import *

peso= array(eval(input('peso:')))
altura= array(eval(input('altura:')))
vet= zeros(3, dtype=float)
imc= peso[i]/(altura[i]**2)

for i in range(size(peso)):
	if(peso[i]>=0 and altura[i]>=0)	:
		vet[i]= peso[i]/(altura[i]**2)
print(vet)
		
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 15:39:28) 
-- CODE:
from numpy import *

peso= array(eval(input('peso:')))
altura= array(eval(input('altura:')))
vet= zeros(3, dtype=float)
imc= peso[i]/(altura[i]**2)

for i in range(size(peso)):
	if(peso[i]>=0 and altura[i]>=0)	:
		vet[0]= peso[0]/(altura[0]**2)
print(vet)
		
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 15:39:56) 
-- CODE:
from numpy import *

peso= array(eval(input('peso:')))
altura= array(eval(input('altura:')))
vet= zeros(3, dtype=float)

for i in range(size(peso)):
	if(peso[i]>=0 and altura[i]>=0)	:
		vet[0]= peso[0]/(altura[0]**2)
print(vet)
		
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 15:41:12) 
-- CODE:
from numpy import *

peso= array(eval(input('peso:')))
altura= array(eval(input('altura:')))
vet= zeros(3, dtype=float)

for i in range(size(peso)):
	if(peso[i]>=0 and altura[i]>=0)	:
		vet[0]=round(peso[0]/(altura[0]**2), 2)
print(vet)
		
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 15:42:49) 
-- CODE:
from numpy import *

peso= array(eval(input('peso:')))
altura= array(eval(input('altura:')))
vet= zeros(3, dtype=float)

for i in range(size(peso)):
	if(peso[i]>=0 and altura[i]>=0)	:
		vet[0]=round(peso[0]/(altura[0]**2), 2)
	if(peso[i]>=0 and altura[i]>=0)	:
		vet[1]=round(peso[1]/(altura[1]**2),2)
	
print(vet)
		
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 15:44:25) 
-- CODE:
from numpy import *

peso= array(eval(input('peso:')))
altura= array(eval(input('altura:')))
vet= zeros(3, dtype=float)

for i in range(size(peso)):
	if(peso[i]>=0 and altura[i]>=0)	:
		vet[0]=round(peso[0]/(altura[0]**2), 2)
	if(peso[i]>=0 and altura[i]>=0)	:
		vet[1]=round(peso[1]/(altura[1]**2),2)
	if(peso[i]>=0 and altura[i]>=0)	:
		vet[2]=round(peso[2]/(altura[2]**2),2)
	
print(vet)
		
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 15:44:56) 
-- CODE:
from numpy import *

peso= array(eval(input('peso:')))
altura= array(eval(input('altura:')))
vet= zeros(3, dtype=float)

for i in range(size(peso)):
	if(peso[i]>=0 and altura[i]>=0)	:
		vet[0]=round(peso[0]/(altura[0]**2), 2)
	if(peso[i]>=0 and altura[i]>=0)	:
		vet[1]=round(peso[1]/(altura[1]**2),2)
	if(peso[i]>=0 and altura[i]>=0)	:
		vet[2]=round(peso[2]/(altura[2]**2),2)
	
print(vet)
		
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 15:46:51) 
-- CODE:
from numpy import *

peso= array(eval(input('peso:')))
altura= array(eval(input('altura:')))
vet= zeros(3, dtype=float)
imc=(peso[i]/(altura[i]**2))
for i in range(size(peso)):
	if(peso[i]>=0 and altura[i]>=0)	:
		vet[0]=round(peso[0]/(altura[0]**2), 2)
	if(peso[i]>=0 and altura[i]>=0)	:
		vet[1]=round(peso[1]/(altura[1]**2),2)
	if(peso[i]>=0 and altura[i]>=0)	:
		vet[2]=round(peso[2]/(altura[2]**2),2)

	
print(vet)
print('O MAIOR IMC DA TURMA EH:',max())
		
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 15:48:39) 
-- CODE:
from numpy import *

peso= array(eval(input('peso:')))
altura= array(eval(input('altura:')))
vet= zeros(3, dtype=float)

for i in range(size(peso)):
	if(peso[i]>=0 and altura[i]>=0)	:
		vet[0]=round(peso[0]/(altura[0]**2), 2)
	if(peso[i]>=0 and altura[i]>=0)	:
		vet[1]=round(peso[1]/(altura[1]**2),2)
	if(peso[i]>=0 and altura[i]>=0)	:
		vet[2]=round(peso[2]/(altura[2]**2),2)
imc=(peso[i]/(altura[i]**2))
	
print(vet)
print('O MAIOR IMC DA TURMA EH:',max())
		
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 15:50:35) 
-- CODE:
from numpy import *

peso= array(eval(input('peso:')))
altura= array(eval(input('altura:')))
vet= zeros(3, dtype=float)

for i in range(size(peso)):
	if(peso[i]>=0 and altura[i]>=0)	:
		vet[0]=round(peso[0]/(altura[0]**2), 2)
	if(peso[i]>=0 and altura[i]>=0)	:
		vet[1]=round(peso[1]/(altura[1]**2),2)
	if(peso[i]>=0 and altura[i]>=0)	:
		vet[2]=round(peso[2]/(altura[2]**2),2)
imc=(peso[i]/(altura[i]**2))
	
print(vet)
print('O MAIOR IMC DA TURMA EH:',max(imc))
		
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 15:50:43) 
-- CODE:
from numpy import *

peso= array(eval(input('peso:')))
altura= array(eval(input('altura:')))
vet= zeros(3, dtype=float)

for i in range(size(peso)):
	if(peso[i]>=0 and altura[i]>=0)	:
		vet[0]=round(peso[0]/(altura[0]**2), 2)
	if(peso[i]>=0 and altura[i]>=0)	:
		vet[1]=round(peso[1]/(altura[1]**2),2)
	if(peso[i]>=0 and altura[i]>=0)	:
		vet[2]=round(peso[2]/(altura[2]**2),2)
imc=(peso[i]/(altura[i]**2))
	
print(vet)
print('O MAIOR IMC DA TURMA EH:',max(imc))
		
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 15:50:45) 
-- CODE:
from numpy import *

peso= array(eval(input('peso:')))
altura= array(eval(input('altura:')))
vet= zeros(3, dtype=float)

for i in range(size(peso)):
	if(peso[i]>=0 and altura[i]>=0)	:
		vet[0]=round(peso[0]/(altura[0]**2), 2)
	if(peso[i]>=0 and altura[i]>=0)	:
		vet[1]=round(peso[1]/(altura[1]**2),2)
	if(peso[i]>=0 and altura[i]>=0)	:
		vet[2]=round(peso[2]/(altura[2]**2),2)
imc=(peso[i]/(altura[i]**2))
	
print(vet)
print('O MAIOR IMC DA TURMA EH:',max(imc))
		
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 15:50:48) 
-- CODE:
from numpy import *

peso= array(eval(input('peso:')))
altura= array(eval(input('altura:')))
vet= zeros(3, dtype=float)

for i in range(size(peso)):
	if(peso[i]>=0 and altura[i]>=0)	:
		vet[0]=round(peso[0]/(altura[0]**2), 2)
	if(peso[i]>=0 and altura[i]>=0)	:
		vet[1]=round(peso[1]/(altura[1]**2),2)
	if(peso[i]>=0 and altura[i]>=0)	:
		vet[2]=round(peso[2]/(altura[2]**2),2)
imc=(peso[i]/(altura[i]**2))
	
print(vet)
print('O MAIOR IMC DA TURMA EH:',max(imc))
		
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 15:51:03) 
-- CODE:
from numpy import *

peso= array(eval(input('peso:')))
altura= array(eval(input('altura:')))
vet= zeros(3, dtype=float)

for i in range(size(peso)):
	if(peso[i]>=0 and altura[i]>=0)	:
		vet[0]=round(peso[0]/(altura[0]**2), 2)
	if(peso[i]>=0 and altura[i]>=0)	:
		vet[1]=round(peso[1]/(altura[1]**2),2)
	if(peso[i]>=0 and altura[i]>=0)	:
		vet[2]=round(peso[2]/(altura[2]**2),2)
imc=(peso[i]/(altura[i]**2))
	
print(vet)
print('O MAIOR IMC DA TURMA EH:',max(imc))
		
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 15:51:15) 
-- CODE:
from numpy import *

peso= array(eval(input('peso:')))
altura= array(eval(input('altura:')))
vet= zeros(3, dtype=float)

for i in range(size(peso)):
	if(peso[i]>=0 and altura[i]>=0)	:
		vet[0]=round(peso[0]/(altura[0]**2), 2)
	if(peso[i]>=0 and altura[i]>=0)	:
		vet[1]=round(peso[1]/(altura[1]**2),2)
	if(peso[i]>=0 and altura[i]>=0)	:
		vet[2]=round(peso[2]/(altura[2]**2),2)
imc=(peso[i]/(altura[i]**2))
	
print(vet)
print('O MAIOR IMC DA TURMA EH:',max(imc))
		
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 15:51:22) 
-- CODE:
from numpy import *

peso= array(eval(input('peso:')))
altura= array(eval(input('altura:')))
vet= zeros(3, dtype=float)

for i in range(size(peso)):
	if(peso[i]>=0 and altura[i]>=0)	:
		vet[0]=round(peso[0]/(altura[0]**2), 2)
	if(peso[i]>=0 and altura[i]>=0)	:
		vet[1]=round(peso[1]/(altura[1]**2),2)
	if(peso[i]>=0 and altura[i]>=0)	:
		vet[2]=round(peso[2]/(altura[2]**2),2)
imc=(peso[i]/(altura[i]**2))
	
print(vet)
print('O MAIOR IMC DA TURMA EH:',max(imc))
		
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 15:51:25) 
-- CODE:
from numpy import *

peso= array(eval(input('peso:')))
altura= array(eval(input('altura:')))
vet= zeros(3, dtype=float)

for i in range(size(peso)):
	if(peso[i]>=0 and altura[i]>=0)	:
		vet[0]=round(peso[0]/(altura[0]**2), 2)
	if(peso[i]>=0 and altura[i]>=0)	:
		vet[1]=round(peso[1]/(altura[1]**2),2)
	if(peso[i]>=0 and altura[i]>=0)	:
		vet[2]=round(peso[2]/(altura[2]**2),2)
imc=(peso[i]/(altura[i]**2))
	
print(vet)
print('O MAIOR IMC DA TURMA EH:',max(imc))
		
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 15:51:28) 
-- CODE:
from numpy import *

peso= array(eval(input('peso:')))
altura= array(eval(input('altura:')))
vet= zeros(3, dtype=float)

for i in range(size(peso)):
	if(peso[i]>=0 and altura[i]>=0)	:
		vet[0]=round(peso[0]/(altura[0]**2), 2)
	if(peso[i]>=0 and altura[i]>=0)	:
		vet[1]=round(peso[1]/(altura[1]**2),2)
	if(peso[i]>=0 and altura[i]>=0)	:
		vet[2]=round(peso[2]/(altura[2]**2),2)
imc=(peso[i]/(altura[i]**2))
	
print(vet)
print('O MAIOR IMC DA TURMA EH:',max(imc))
		
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 15:52:44) 
-- CODE:
from numpy import *

peso= array(eval(input('peso:')))
altura= array(eval(input('altura:')))
vet= zeros(3, dtype=float)

for i in range(size(peso)):
	if(peso[i]>=0 and altura[i]>=0)	:
		vet[0]=round(peso[0]/(altura[0]**2), 2)
	if(peso[i]>=0 and altura[i]>=0)	:
		vet[1]=round(peso[1]/(altura[1]**2),2)
	if(peso[i]>=0 and altura[i]>=0)	:
		vet[2]=round(peso[2]/(altura[2]**2),2)
imc=(peso[i]/(altura[i]**2))
	
print(vet)
print('O MAIOR IMC DA TURMA EH:',max(imc))
		
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 15:52:51) 
-- CODE:
from numpy import *

peso= array(eval(input('peso:')))
altura= array(eval(input('altura:')))
vet= zeros(3, dtype=float)

for i in range(size(peso)):
	if(peso[i]>=0 and altura[i]>=0)	:
		vet[0]=round(peso[0]/(altura[0]**2), 2)
	if(peso[i]>=0 and altura[i]>=0)	:
		vet[1]=round(peso[1]/(altura[1]**2),2)
	if(peso[i]>=0 and altura[i]>=0)	:
		vet[2]=round(peso[2]/(altura[2]**2),2)
imc=(peso[i]/(altura[i]**2))
	
print(vet)
print('O MAIOR IMC DA TURMA EH:',max(imc))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 15:53:00) 
-- CODE:
from numpy import *

peso= array(eval(input('peso:')))
altura= array(eval(input('altura:')))
vet= zeros(3, dtype=float)

for i in range(size(peso)):
	if(peso[i]>=0 and altura[i]>=0)	:
		vet[0]=round(peso[0]/(altura[0]**2), 2)
	if(peso[i]>=0 and altura[i]>=0)	:
		vet[1]=round(peso[1]/(altura[1]**2),2)
	if(peso[i]>=0 and altura[i]>=0)	:
		vet[2]=round(peso[2]/(altura[2]**2),2)

	
print(vet)
print('O MAIOR IMC DA TURMA EH:',max(imc))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 15:58:58) 
-- CODE:
from numpy import *

peso= array(eval(input('peso:')))
altura= array(eval(input('altura:')))
vet= zeros(3, dtype=float)

for i in range(size(peso)):
	if(peso[i]>=0 and altura[i]>=0)	:
		vet[0]=round(peso[0]/(altura[0]**2), 2)
	if(peso[i]>=0 and altura[i]>=0)	:
		vet[1]=round(peso[1]/(altura[1]**2),2)
	if(peso[i]>=0 and altura[i]>=0)	:
		vet[2]=round(peso[2]/(altura[2]**2),2)

	
print(vet)
print('O MAIOR IMC DA TURMA EH:',max(imc))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 15:59:43) 
-- CODE:
from numpy import *

peso= array(eval(input('peso:')))
altura= array(eval(input('altura:')))
vet= zeros(3, dtype=float)
imc= (peso[i]/(altura[i]**2))
for i in range(size(peso)):
	if(peso[i]>=0 and altura[i]>=0)	:
		vet[0]=round(peso[0]/(altura[0]**2), 2)
	if(peso[i]>=0 and altura[i]>=0)	:
		vet[1]=round(peso[1]/(altura[1]**2),2)
	if(peso[i]>=0 and altura[i]>=0)	:
		vet[2]=round(peso[2]/(altura[2]**2),2)

	
print(vet)
print('O MAIOR IMC DA TURMA EH:',max(imc))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:00:11) 
-- CODE:
from numpy import *

peso= array(eval(input('peso:')))
altura= array(eval(input('altura:')))
vet= zeros(3, dtype=float)

for i in range(size(peso)):
	if(peso[i]>=0 and altura[i]>=0)	:
		vet[0]=round(peso[0]/(altura[0]**2), 2)
	if(peso[i]>=0 and altura[i]>=0)	:
		vet[1]=round(peso[1]/(altura[1]**2),2)
	if(peso[i]>=0 and altura[i]>=0)	:
		vet[2]=round(peso[2]/(altura[2]**2),2)

imc= (peso[i]/(altura[i]**2))
print(vet)
print('O MAIOR IMC DA TURMA EH:',max(imc))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
